--- a/abstract.tex
+++ b/abstract.tex
@@ -1,5 +1,5 @@
 \prefacesection{Abstract}
 
-Climate change, agricultural expansion, and population growth are dramatically altering ecosystem structure, function, and community composition worldwide. Yet our ability to measure, monitor, and forecast biodiversity change—crucial for mitigating it—remains limited. Until recently, a global biodiversity monitoring system seemed far-fetched. The sheer amount of data required that would be required to map the variation in genes, species, communities, and ecosystems that comprises biodiversity is enormous, to say nothing of mapping change over time. And ecology has long been maligned as a data-scarce discipline, with field plots and species occurrence records historically sparsely and opportunistically collected and access fragmented among research groups. But several scientific advances in the past decade—the deployment of hundreds of earth observing sensors, consolidation and standardization of open ecological data, and access to open software and computing resources—have significantly reduced the ecological data gap that biodiversity monitoring systems needed to bridge. What should we make of all this new information? Right now, the data alone are insufficient for monitoring purposes. Ecological data are subject to taxonomic, geographical, or recency biases, and satellites do not record measurements in ecological units; they're often in units of energy (e.g., $W\, m^{-2}\, sr^{-1}\, {\mu}m^{-1}$). But a framework that links these disparate data types—discrete, spatially-explicit species data and continuous, feature-rich, and regularly-updated earth observations imagery—could be used to precisely map species lcoations and habitat across large extents over time. In this dissertation, I demonstrate how concepts of pattern and scale in ecology could be used to design such a framework, as these concepts apply to both ecological and to earth observations analyses.
+Climate change, agricultural expansion, and population growth are dramatically altering ecosystem structure, function, and community composition worldwide. Yet our ability to measure, monitor, and forecast biodiversity change—crucial for mitigating it—remains limited. Until recently, global biodiversity monitoring systems seemed far-fetched. The sheer amount of data that would be required to map the variation in genes, species, communities, and ecosystems that comprises biodiversity is enormous, to say nothing of mapping change over time. Until recently, ecology was perceived as a data-scarce discipline, with field plots and species occurrence records sparsely and opportunistically collected, and access fragmented among research groups. But several advances in the past decade—the deployment of hundreds of earth observing sensors, the consolidation and standardization of open ecological data, and increased access to open software and computing resources—have significantly reduced the ecological data gap that biodiversity monitoring systems needed to bridge. What should we make of all this new information? Right now, the data alone are insufficient for monitoring purposes. Ecological data are subject to taxonomic, geographical, or recency biases, and satellites do not record measurements in ecological units; they're often in units of energy (e.g., $W\, m^{-2}\, sr^{-1}\, {\mu}m^{-1}$). But a framework that links these disparate data types—discrete, spatially-explicit species data and continuous, feature-rich, and regularly-updated earth observations imagery—could be used to precisely map species locations and habitat across large extents over time. In this dissertation, I demonstrate how concepts of pattern and scale in ecology could be used to design such a framework, as these concepts apply to both ecological and to earth observations analyses.
 
-Following a literature review of the scale-dependent challenges to linking \textit{in situ} and earth observations data, I describe two scale-explicit machine learning approaches to species mapping: classifying species identities for individual tree crowns in high resolution airborne earth observations data, and mapping the niches and distributions of two mosquito arbovirus vectors, \textit{Aedes aegypti} and \textit{Ae. albopictus}, using low resolution satellite data. The tree species modeling approach identified crowns with $>90\%$ accuracy, enabling precision species mapping over large areas. The mosquito modeling approach identified novel drivers of the spatial distributions for these arbovirus vectors, revealing that resource constraints (i.e., access to blood meal) play an central role in determining distribution patterns for these globally invasive species. These applications span several orders of biological magnitude, mapping some of the largest (trees) and smallest (mosquitoes) terrestrial macro-organisms across landscape and continental extents. This work advances the conceptual and technical basis for deploying satellite-based biodiversity monitoring systems using ecological scaling principles. With luck, we may be able to use the systems designed to monitor biodiversity to also help conserve it.
+Following a literature review of the scale-dependent challenges to linking \textit{in situ} and earth observations data, I describe two scale-explicit machine learning approaches to species mapping: classifying species identities for individual tree crowns in high resolution airborne earth observations data, and mapping the niches and distributions of two mosquito arbovirus vectors, \textit{Aedes aegypti} and \textit{Ae. albopictus}, using low resolution satellite data. The tree species modeling approach identified crowns with $>90\%$ accuracy, enabling precision species mapping over large areas. The mosquito modeling approach identified novel drivers of the spatial distributions for these arbovirus vectors, revealing that resource constraints (i.e., access to blood meals) play a central role in determining distribution patterns for these globally invasive species. These applications span several orders of biological magnitude, mapping some of the largest (trees) and smallest (mosquitoes) terrestrial macro-organisms across landscape and continental extents. This work advances the conceptual and technical basis for deploying satellite-based biodiversity monitoring systems using ecological scaling principles.
