--- a/acknowledgements.tex
+++ b/acknowledgements.tex
@@ -4,15 +4,15 @@ This work was deeply influenced by conversations and friendships with many kind 
 
 Gretchen Daily welcomed me to her lab in the Biology Department in early 2016. She has been a champion and an advocate for me every day since, and I am profoundly grateful for the opportunities she has created for me. I am inspired by her commitment to understanding the value of nature—from all perspectives—and to finding opportunities to conserve and cherish our planet's wondrous biodiversity. We've always shared the commitment; she taught me how to translate it into action. I've learned so much from Gretchen: how to communicate my work with passion and precision; how to build an organization dedicated to inclusive, science-driven conservation; the value of leading through empowering others; and how to meet every person where they are. As my primary adviser, Gretchen was solely focused on my development as a scientist, ensuring I was working on problems I was passionate about and that I had access to the people and resources that would help me grow. I benefit tremendously as a result. Thank you.
 
-I have had the honor and the privilege of being advised by Erin Gilmour Mordecai and Chris Field, two thoughtful, critical and generous professors who inspire and challenge me in every discussion we have. When most of my early research focused on finding empirical patterns in ecological data, Erin encouraged me to dig deeper and deeper into the biological mechanisms that might underpin them, helping me think more clearly and test assumptions more rigorously than I would have otherwise. Chris has a wealth of knowledge and experience as a scientist and as an adviser. I am regularly amazed by his ability to ask the right question or provide the right recommendation to help me think through an issue more clearly and guiding me towards novel research frontiers. They have both shaped my perspective as a scientist, and I am grateful for their advice.
+I have had the honor and the privilege of being advised by Erin Mordecai and Chris Field, two thoughtful, critical and generous professors who inspire and challenge me in every discussion we have. When most of my early research focused on finding empirical patterns in ecological data, Erin encouraged me to dig deeper and deeper into the biological mechanisms that might underpin them, helping me think more clearly and test assumptions more rigorously than I would have otherwise. Chris has a wealth of knowledge and experience as a scientist and as an adviser. I am regularly amazed by his ability to ask the right question or provide the right recommendation to help me think through an issue more clearly and guiding me towards novel research frontiers. They have both shaped my perspective as a scientist, and I am grateful for their advice.
 
 In the Biology Department, I wish to express my gratitude to Hal Mooney and Rodolfo Dirzo. Both Hal and Rodolfo have made themselves available as mentors throughout my time at Stanford, and have provided insights and encouragement that I value deeply. They are both role models for me as global ecologists, and it's been a thrill to spend time with them.
 
-I am fortunate to be affiliated with the Stanford Center for Conservation Biology. I built strong professional and personal relationships there with Jeff Smith, Nick Hendershot, Kelly Langhans, Greg Bratman, Hannah Frank, and Jon Flanders. I am particularly grateful for the time spent with Jeff, Nick, and Kelly, as we had the opportunity to grow together as Ph.D. students and to constantly learn from each other. I had a blast.
+I am fortunate to be affiliated with the Stanford Center for Conservation Biology. I built strong professional and personal relationships there with Jeff Smith, Nick Hendershot, Kelly Langhans, Ale Echeverri, Priscilla San Juan, Beth Morrison, Avery Hill, Lucas Pavan, Greg Bratman, Hannah Frank, and Jon Flanders. I am particularly grateful for the time spent with Jeff, Nick, and Kelly, as we had the opportunity to grow together as Ph.D. students and to constantly learn from each other. I had a blast.
 
 I spent many hours learning from the scientists at the Natural Capital Project, and probably even more hours socializing with them. Thank you to the NatCap team for welcoming me and teaching me new ways to think about the value of nature. Special thanks are due to Becky Chaplin-Kramer, Lisa Mandle, Rich Sharp, Ben Bryant, Marcelo Guevara, Morgan Kain, Adrian Vogl, Sarah Cafasso, Perrine Hamel, Charlie Weil, James Douglass, Steve Polasky and Mary Ruckelshaus.
 
-Thank you to all of the collaborators who helped design, plan and execute the mosquito vector field surveys in Costa Rica and Peru, which are reported in \textit{Chapter 4}. This includes Meghan Howard, Wily Lescano, Luis Fernandez, Stephanie Montero Trujillo, Ricardo Gamboa, Mileyka Santos Gaitán, Denis Navarro, Eloy Inisuy, Paul Sairitupa, Joel Sajami, and Jamieson O'Marr.
+Thank you to all of the collaborators who helped design, plan and execute the mosquito vector field surveys in Costa Rica and Peru, which are reported in \textit{Chapter 4}. This includes Meghan Howard, Willy Lescano, Luis Fernandez, Stephanie Montero Trujillo, Ricardo Gamboa, Mileyka Santos Gaitán, Denis Navarro, Eloy Inisuy, Paul Sairitupa, Joel Sajami, and Jamieson O'Marr.
 
 I am grateful for the support of Stanford University, which provided access to a unique array of educational resources. I spent many hours in the collections of the Branner Earth Sciences Library, the Bowes Art \& Architecture Library and the David Rumsey Map Center. Libraries are tremendously valuable and often underutilized resources, and I appreciate the University's commitment to archiving, indexing and making accessible their unique and expansive collections. I have also benefit from access to resources like the Hume Center for Writing and Speaking and the Stanford Geospatial Center, which helped me grow as a writer, an analyst and as a scholar.
 
