--- a/manuscript-ch2.tex
+++ b/manuscript-ch2.tex
@@ -25,7 +25,7 @@ Classifying species with imaging spectroscopy instead relies on distinguishing s
     \item Sensor noise.
 \end{enumerate}
 
-Measurement conditions and canopy structure tend to drive the majority of spectral variance; up to 79–89\% of the signal is driven by within-crown spectral variation \cite{Baldeck2014-du, Yao2015-dp}. Unfortunately, within-crown variation does not help distinguish between species. The spectral variation useful for discriminate between species is instead driven by differences in the plant functional traits expressed by a species \cite{Asner2011-tn, Martin2018-fg}. Disentangling trait-based variation from measurement and structure-based variation is thus central to mapping species with imaging spectroscopy.
+\noindent Measurement conditions and canopy structure tend to drive the majority of spectral variance; up to 79–89\% of the signal is driven by within-crown spectral variation \cite{Baldeck2014-du, Yao2015-dp}. Unfortunately, within-crown variation does not help distinguish between species. The spectral variation useful for discriminate between species is instead driven by differences in the plant functional traits expressed by a species \cite{Asner2011-tn, Martin2018-fg}. Disentangling trait-based variation from measurement and structure-based variation is thus central to mapping species with imaging spectroscopy.
 
 In this chapter, I describe an approach to tree species classification using airborne imaging spectroscopy data that builds on the above methods and takes a taxonomically-informed approach to data preprocessing and model selection in order to advance the discussion on best practices. This approach was developed as a submission to an Ecological Data Science Evaluation competition (ECODSE; \url{https://www.ecodse.org/}) sponsored by the National Institute of Standards and Technology. This competition provided participants with labeled tree crown data and airborne imaging spectroscopy data, collected by the National Ecological Observatory Network’s Airborne Observation Platform (NEON AOP) \cite{Kampe2010-fz}, which was used to identify tree crowns to the species level. The work described was submitted to the ECODSE competition under the team name of the Stanford Center for Conservation Biology (CCB), and has since been formalized as CCB-ID.
 
