--- a/manuscript-introduction.tex
+++ b/manuscript-introduction.tex
@@ -13,7 +13,7 @@ The form and function of the earth's ecosystems are rapidly changing. Agricultur
 \label{fig:las-alturas}
 \end{figure}
 
-This restructuring of the earth's ecosystems could be framed as a global game of whack-a-mole. Wildlife populations are crashing while livestock populations are booming. Forests are cut and cleared in the tropics, replanted and restored in temperate and boreal systems. This has had tremendous effects on terrestrial biodiversity; around 25\% of plant and animal groups are threatened, the extinction rate is now tens to hundreds of times higher than the average rate over the past 10 million years, and the number of invasive species per-country has increased nearly 70\%, all leading to the widespread erosion of differences between ecological communities \cite{IPBES2019-hl}. Ecosystems are a canonical example of complex, interconnected systems, and these changes are bound to have far-reaching consequences for other ecological processes. This includes the transmission of vector-borne diseases, which are poised to increase in frequency and intensity with environmental change, potentially exposing an additional billion people to the threat of Zika alone \cite{Ryan2020-ay}. With so much at stake, biodiversity monitoring systems are now being developed to track these complex patterns—the winners, the losers, the just differents—and to mitigate the effects of change.
+This restructuring of the earth's ecosystems could be framed as a global game of whack-a-mole. Wildlife populations are crashing while livestock populations are booming. Forests are cut and cleared in the tropics, replanted and restored in temperate and boreal systems (Fig. \ref{fig:las-alturas}). This has had tremendous effects on terrestrial biodiversity; around 25\% of plant and animal groups are threatened, the extinction rate is now tens to hundreds of times higher than the average rate over the past 10 million years, and the number of invasive species per-country has increased nearly 70\%, all leading to the widespread erosion of differences between ecological communities \cite{IPBES2019-hl}. Ecosystems are a canonical example of complex, interconnected systems, and these changes are bound to have far-reaching consequences for other ecological processes. This includes the transmission of vector-borne diseases, which are poised to increase in frequency and intensity with environmental change, potentially exposing an additional billion people to the threat of Zika alone \cite{Ryan2020-ay}. With so much at stake, biodiversity monitoring systems are now being developed to track these complex patterns—the winners, the losers, the just differents—and to mitigate the effects of change.
 
 A series of biodiversity monitoring frameworks have recently been developed to systematically assess change for multiple taxa over large extents \cite{Scholes2012-ec,Fernandez2015-na}. These monitoring frameworks have been shaped in large part by open access to biodiversity data \cite{Kattge2011-tf, Jetz2012-mw, Metzger2013-mz, Culina2018-ih} as well as access to an array of modeling tools to analyze these data \cite{Butchart2010-we, Pettorelli2016-wi, Gorelick2017-nx}. Most contemporary monitoring frameworks map biodiversity patterns according to the Essential Biodiversity Variables framework, a hierarchical grouping of metrics that quantify the variation in genes, species, communities and ecosystems \cite{Pereira2013-pk}. Inspired by the Essential Climate Variables framework, these metrics are i) biological, ii) sensitive to change, and iii) ecosystem agnostic, meaning they can be mapped anywhere. This definition is broad enough to include patterns of ecosystem structure, like aboveground biomass or habitat fragmentation, which are not often referred to as biodiversity \textit{per se}. This flexible and inclusive framework—which extends beyond a narrower definition of biodiversity as patterns of species richness, evenness and abundance—is now the standard for global monitoring systems, as it has been adopted by the intergovernmental Group on Earth Observations \cite{Geo_bon2017-ak}.
 
@@ -49,9 +49,9 @@ These patterns are useful in biodiversity monitoring contexts despite violating 
 
 There are three general themes explored in this dissertation. First is regarding the role of spatial and temporal measurement scales in determining which biodiversity patterns can be detected by earth observations sensors, including what drives signal variance at each scale. Changing measurement scales, both by definition and in practice, changes the biological variation within and between measurements, and nonlinear patterns often emerge at ecological boundaries known as domains of scale. The transition from measuring leaf reflectance to measuring canopy reflectance is an example of these nonlinear effects. Light traveling through a canopy is absorbed, transmitted and reflected by individual leaves, and the transmitted and scattered photons can be absorbed, transmitted, or reflected by other leaves within the canopy. Since the amount of light absorbed, transmitted, or reflected varies by wavelength, plant canopies are spectrally distinct from the individual leaves that comprise them, with dense canopies absorbing more visible light and scattering and reflecting more infrared light. This is the mechanistic basis for retrieving forest structural patterns like leaf area index from optical data \cite{Jordan1969-ol}. While some changes propagate across scales, like changes in chlorophyll concentrations, the methods for measuring these changes depends on the scale of analysis, as canopy structure introduces additional spectral variance that covaries with pigment changes. Identifying the appropriate domains of scale for analysis is a critical when measuring and modeling biodiversity patterns, and the example above is explored in-depth in \textit{Chapter 3}.
 
-The second theme of this dissertation concerns the Goldilocks principle. Ecology was long considered a data-scarce discipline, as many global ecological theories were derived from data on a single species, a single community, or a few islands \cite{Grinnell1917-aa, Hubbell2001-lq, MacArthur1967-zp}. The past decade has upended this trend, as open and standardized biodiversity data are more abundant and accessible than ever. So, too, are global earth observations data. But this flood of information can be overwhelming when you just need a tall glass of biogeography. This dissertation explores approaches to combining incomplete species data with abundant earth observations data to map patterns of biodiversity that are ``just right." \textit{Chapter 3} decomposes 426 spectral reflectance bands from airborne imaging spectroscopy data into principal components finding that, with feature selection, only around 25 components were required to discriminate between species. \textit{Chapter 4} analyzes over 8,000 species occurrence records and distilled 16 years of daily satellite imagery into descriptive metrics of climate, habitat and resource use across Latin America and the Caribbean to quantify constraints on niche use for \textit{Ae. aegypti} and \textit{Ae. albopictus}, mapping the potential distributions of these arbovirus disease vectors at continental scales.
+The second theme of this dissertation concerns the Goldilocks principle. Considering the global nature of the field, ecology was previously a data-scarce discipline, as many central ecological theories were derived from data on a single species, a single community, or a few islands \cite{Grinnell1917-aa, Hubbell2001-lq, MacArthur1967-zp}. The past decade has upended this trend, as open and standardized biodiversity data are more abundant and accessible than ever. So, too, are global earth observations data. But this flood of information can be overwhelming. This dissertation explores approaches to combining incomplete species data (``too little") with abundant earth observations data (``too much") to map patterns of biodiversity that are ``just right." \textit{Chapter 3} decomposes 426 spectral reflectance bands from airborne imaging spectroscopy data into principal components finding that, with feature selection, only around 20-30 components were required to discriminate between species. \textit{Chapter 4} analyzes over 8,000 species occurrence records and distills 16 years of daily satellite imagery into descriptive metrics of climate, habitat and resource use across Latin America and the Caribbean to quantify constraints on niche use for \textit{Ae. aegypti} and \textit{Ae. albopictus}, mapping the potential distributions of these arbovirus disease vectors at continental scales.
 
-The final theme of this dissertation is the use of biomimicry: selecting and training machine learning models to approximate mechanistic ecological models. Commensurate with the expansion of open data, machine learning methods for analyzing ecological data have recently proliferated \cite{Pal2005-qh, Phillips2006-ua, Hastie2009-fs, Elith2011-kb, Brodrick2019-jz}. These are essential tools for identifying novel patterns in large datasets where mechanistic relationships are unclear. But they're also prone to overfit to spurious, non-biological patterns, especially in spatial contexts \cite{Hawkins2012-gu, Fourcade2018-ws}. I approach the problem in this dissertation by carefully selecting machine learning models that mimic well-known ecological processes, using data that has been transformed to fit model assumptions. \textit{Chapter 3} uses decision tree ensembles to predict tree species identities based on decomposed reflectance data, approximating a dichotomous tree and morphological trait-based taxonomy. \textit{Chapter 4} fits non-linear and smoothly varying response functions to climate, habitat, and resource use patterns for \textit{Ae. aegypti} and \textit{Ae. albopictus}, which was designed to mimic thermal response functions characterized for those vectors in laboratory settings \cite{Mordecai2019-ya}.
+The final theme of this dissertation is the use of biomimicry: selecting and training machine learning models to approximate mechanistic ecological models. Commensurate with the expansion of open data, machine learning methods for analyzing ecological data have recently proliferated \cite{Pal2005-qh, Phillips2006-ua, Hastie2009-fs, Elith2011-kb, Brodrick2019-jz}. These are essential tools for identifying novel patterns in large datasets where mechanistic relationships are unclear. But they are also prone to overfit to spurious, non-biological patterns, especially in spatial contexts \cite{Hawkins2012-gu, Fourcade2018-ws}. I approach the problem in this dissertation by carefully selecting machine learning models that mimic well-known ecological processes, using data that has been transformed to fit model assumptions. \textit{Chapter 3} uses decision tree ensembles to predict tree species identities based on decomposed reflectance data, approximating a dichotomous tree and morphological trait-based taxonomy. \textit{Chapter 4} fits non-linear and smoothly varying response functions to climate, habitat, and resource use patterns for \textit{Ae. aegypti} and \textit{Ae. albopictus}, which was designed to mimic thermal response functions characterized for those vectors in laboratory settings \cite{Mordecai2019-ya}.
 
 Together, this work further develops the technical and conceptual basis for building biodiversity monitoring systems that carefully integrate earth observations and \textit{in situ} data. However, much work remains to actually build these systems and provide the data to the right stakeholders who can use it to inform conservation and land management decisions \cite{Guerry2015-zt, Ramirez-Reyes2019-nq}. The end of the last decade marked the time to deliver on the promises of the Ecosystem Services framework; now is the time to deliver on the promise of biodiversity monitoring \cite{Daily2009-jz, IPBES2019-hl}.
 
@@ -74,7 +74,7 @@ Two of the following chapters have been published in peer-reviewed journals unde
 \noindent Per the \textit{PeerJ} Copyright Policy (\url{https://peerj.com/about/policies-and-procedures/}):
 
 \begin{quote}
-    All \textit{PeerJ} articles are published under a Creative Commons Attribution License... With this license, Authors retain copyright, but allow any user to share, copy, distribute, transmit, adapt and make commercial use of the work without needing to provide additional permission, provided appropriate attribution is made to the original author or source.
+    All \textit{PeerJ} articles are published under a Creative Commons Attribution License. With this license, Authors retain copyright, but allow any user to share, copy, distribute, transmit, adapt and make commercial use of the work without needing to provide additional permission, provided appropriate attribution is made to the original author or source.
 \end{quote}
 
 \noindent Chapters 1, 4, and 5 are currently unpublished outside of this dissertation.
